# srxsync

./: .gitignore  LICENSE  LICENSE-APACHE  README.md  pyproject.toml
.github/workflows/: security.yml
docs/superpowers/plans/: 2026-04-22-rustperformance.md  2026-04-22-srxsync.md  2026-04-23-transport-benchmark.md
docs/superpowers/specs/: 2026-04-22-rustperformance-design.md  2026-04-22-srxsync-design.md  2026-04-23-transport-benchmark-design.md
srxsync/: categories.py  cli.py  diff.py  drift.py  inventory.py  orchestrator.py  results.py
srxsync/data/: categories.yaml
srxsync/secrets/: __init__.py  base.py  env.py  keyring_provider.py  netrc_provider.py  vault.py
srxsync/transport/: __init__.py  base.py  pyez.py  rustez.py
tests/: lab.yaml.example
tests/bench/: bench_transports.py
tests/fixtures/configs/: real_master.xml  source_minimal.xml  target_drift.xml
tests/fixtures/inventory/: missing_source.yaml  unknown_category.yaml  valid.yaml
tests/integration/: conftest.py  test_lab_check.py  test_lab_commit_confirmed.py  test_lab_push.py  test_parity_fetch.py
tests/unit/: test_categories.py  test_cli.py  test_diff.py  test_drift.py  test_inventory.py  test_secrets.py  test_secrets_optional.py  test_transport_abc.py  test_transport_factory.py
